# agf-toolkit

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SUMMARY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: Lint & Test.yml  Lint.yml  Run tests.yml  Test & Build.yml
agequip_rw/: __init__.py  __main__.py
agequip_rw/processor/: codec.py  constants.py  gears.py  image.py  text.py
agequip_rw/utils/: adb.py  color.py
agf_toolkit/: __init__.py  __main__.py
agf_toolkit/abc/: __init__.py
agf_toolkit/processor/: __init__.py  calibration.py  color.py  constant.py  gear.py  gears.py  image.py  text.py  utils.py
agf_toolkit/templates/: __init__.py
agf_toolkit/templates_sample/: __init__.py
agf_toolkit/utils/: adb.py  calibration.py  color.py  image.py
docs/: 1. Encoded gear structure.md
tests/: test_codec.py  test_main_parser.py
