[tool.poetry]
name = "agf_toolkit"
version = "0.0.1"
description = "A toolkit for Artery Gear: Fusion"
authors = ["PythonTryHard <31789326+PythonTryHard@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "agf_toolkit"}]

[tool.poetry.dependencies]
python = "^3.11, <3.12"
opencv-python = "^4.6.0.66"
paddleocr = "^2.6.1"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
paddlepaddle = "^2.4.0"
scikit-image = "^0.19.3"
numpy = "^1.23.5"
requests = "^2.28.1"
tqdm = "^4.64.1"
adbutils = { git = "https://github.com/PythonTryHard/adbutils" }

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
mypy = "^0.981"
pylint = "^2.15.3"
types-requests = "^2.28.11.2"
pytest = "^7.2.0"

[tool.poetry.group.prototyping.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.network.dependencies]
mitmproxy = "^9.0.1"
pyzmq = "^24.0.1"
	

[tool.black]
line-length=120

[tool.isort]
profile = "black"
    
[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
generated-members = ["cv2.*"]
disable = [
    "missing-module-docstring",
    "unused-argument",
    "expression-not-assigned",
    "too-few-public-methods"
]
ignore-paths = [
    "tests",
    "agf_toolkit/templates"
]

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paddleocr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ppadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adbutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
