[tool.poetry]
name = "agf_toolkit"
version = "0.1.0"
description = "A toolkit for Artery Gear: Fusion"
authors = ["PythonTryHard <31789326+PythonTryHard@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "agf_toolkit"}]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10, <3.11"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"   
numpy = "^1.24.0"
paddlepaddle = "^2.4.1"
paddleocr = "^2.6.1.1"
opencv-python = "^4.6.0.66"
scikit-image = "^0.19.3"
adbutils = { git = "https://github.com/PythonTryHard/adbutils" }
requests = "^2.28.1"
tqdm = "^4.64.1"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
pylint = "^2.15.3"
pytest = "^7.2.0"
types-requests = "^2.28.11.2"


[tool.poetry.group.network]
optional = true

[tool.poetry.group.network.dependencies]
mitmproxy = "^9.0.1"
pyzmq = "^24.0.1"


[tool.black]
line-length=120


[tool.isort]
profile = "black"


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
generated-members = ["cv2.*"]
disable = [
    "missing-module-docstring",
    "unused-argument",
    "expression-not-assigned",
    "too-few-public-methods"
]
ignore-paths = [
    "tests",
    "agf_toolkit/templates"
]


[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paddleocr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ppadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adbutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true
