[tool.poetry]
name = "agf_toolkit"
version = "0.1.0"
description = "A toolkit for Artery Gear: Fusion"
authors = ["PythonTryHard <31789326+PythonTryHard@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "agf_toolkit"}]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
# Core dependencies
python = "^3.10, <3.11"
loguru = "^0.6.0"
numpy = "^1.24.2"
paddlepaddle = "^2.4.1"
paddleocr = { url = "https://github.com/PythonTryHard/wheels/releases/download/tip/paddleocr-2.6.1.2-py3-none-any.whl" }
opencv-python = "^4.7.0.68"
scikit-image = "^0.19.3"
adbutils = "^1.2.2"
requests = "^2.28.2"
tqdm = "^4.64.1"

# Extras for networking
mitmproxy = {version = "^9.0.1", optional = true}
pyzmq = {version = "^25.0.0", optional = true}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
pylint = "^2.15.10"
pytest = "^7.2.1"
types-requests = "^2.28.11.8"


[tool.poetry.extras]
networking = ["mitmproxy", "pyzmq"]


[tool.black]
line-length=120


[tool.isort]
profile = "black"


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
generated-members = ["cv2.*"]
disable = [
    "missing-module-docstring",
    "unused-argument",
    "expression-not-assigned",
    "too-few-public-methods"
]
ignore-paths = [
    "tests",
    "agf_toolkit/templates"
]


[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paddleocr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ppadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adbutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true
